--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,9 @@
 <head>
   <link href="http://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <!--Font Awesome -->
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
 
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
@@ -14,10 +17,17 @@
   </title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ site.baseurl }}/public/css/poole.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/public/css/syntax.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/public/css/monopool.css">
-  <link href='http://fonts.googleapis.com/css?family=Cousine|Inconsolata|Roboto:400,700,400italic' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="/public/css/poole.min.css">
+  <link rel="stylesheet" href="/public/css/monopool.min.css">
+  <link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic|Source+Code+Pro' rel='stylesheet' type='text/css'>
+
+  <!-- Highlight.js -->
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/default.min.css">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/highlight.min.js"></script>
+  <!-- Highlight color styles -->
+  <script>hljs.initHighlightingOnLoad();</script>
+  <!-- <link rel="stylesheet" href="/public/css/syntax.css"> -->
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/railscasts.min.css">
 
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/apple-touch-icon-144-precomposed.png">
